Fixed validation-summary to align left.

--- a/css/site.css
+++ b/css/site.css
@@ -19,6 +19,7 @@ div{
 
 #validation-summary {
     list-style-type: square;
+    text-align:left;
 }
 
 .rating-error{
